--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-    background: rgba(28, 36, 90, 0.8);
+
+    background: rgba(28, 36, 90);
     backdrop-filter: blur(15px) saturate(150%);
     -webkit-backdrop-filter: blur(15px);
 }
@@ -139,7 +140,7 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    padding-bottom: 5px;
+    padding: 5px;
     font-size: 30px;
 }
 .footer-icon{
@@ -205,8 +206,9 @@ footer {
 }
 
 .general-button:hover {
-    background-color:var(--primary-color);
+    background-color:var(--accent-color);
     color: var(--secondary-color);
+    border-color: var(--accent-color);
 }
 
 /*Hero general and component styling*/
@@ -469,9 +471,6 @@ footer {
     cursor: default;
 }
 
-.project-title-container{
-    padding-top: var(--nav-height);
-}
 
 .project-list-title-container{
     color: var(--primary-color);
@@ -536,10 +535,17 @@ h4{
   margin: 0 auto;
 }
 
-.skill-tag{
-    background-color: var(--accent-color);
-  border: none;
-  color: var(--secondary-color);
+.individual-tag{
+    background-color: #a9d7f1;
+}
+
+.team-tag{
+    background-color: #dcd2ff;
+}
+
+
+.mechanical-tag, .entrepreneurship-tag, .web-dev-tag, .individual-tag, .team-tag, .skill-tag{
+  color: var(--primary-color);
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -547,20 +553,40 @@ h4{
   cursor: default;
   border-radius: 16px;
   padding: 5px 10px;
- /* border: 2px solid var(--secondary-color);*/
   font-family: var(--strong-font);
   font-weight: 600;
   transition: .4s ease;
-  font-size: 14px;
+  font-size: 13px;
 }
 
-.skill-tag-container{
+.mechanical-tag{
+    background-color: rgb(227, 221, 223);
+   /* color:rgb(121, 54, 73);*/
+}
+
+.entrepreneurship-tag{
+    background-color: rgb(184, 255, 200);
+    /*color: rgb(19, 88, 35);*/
+}
+
+.web-dev-tag{
+    background-color: rgb(244, 184, 164);
+}
+
+.skill-tag{
+    border: 2px solid var(--accent-color);
+    color: var(--accent-color);
+}
+
+.skill-tag-container, .category-tag-container{
     display: flex;
     flex-wrap: wrap;
     margin-top: 5px;
+    gap:5px;
 }
 
-.base-text{
+
+.base-text, figcaption{
     font-family: var(--clean-font);
     color: var(--primary-color);
     font-size: 16px;
@@ -596,4 +622,95 @@ h4{
 
 a{
     color:inherit;
+}
+
+.project-title-container{
+    padding-top: calc(var(--nav-height) + 10px);
+    display: flex;
+    justify-content: center;
+    gap:5px;
+    flex-direction: row;
+    align-items: center;
+    margin: 10px 40px 10px 40px;
+}
+
+.project-title-text-container{
+    display: flex;
+    flex-direction: column;
+    color: var(--primary-color);
+    gap: 10px;
+}
+
+h3{
+    font-family: var(--strong-font);
+    font-weight: 800;
+    color: var(--primary-color);
+    font-size: 50px;
+}
+
+.project-header-image{
+    height: 300px;
+    width: 550px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.bullet-list{
+list-style-type: disc;
+padding-left: 30px;
+display: flex;
+gap: 8px;
+flex-direction: column;
+}
+
+.bullet-list li{
+    font-size: 22px;
+}
+
+.bullet-list li::marker {
+  color: var(--primary-color);
+  font-size: inherit;
+}
+.section{
+    display: flex;
+    align-items: top;
+    gap: 10px;
+}
+
+.description{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 30px 40px 10px 40px;
+}
+
+figcaption{
+    font-size: 15px;
+    padding: 5px;
+    color: var(--accent-color);
+}
+
+figure{
+    text-align: center;
+}
+
+.image-custom{
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.view-more{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: var(--primary-color);
+}
+
+.multiple-images{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 10px;
 }
