--- a/style.css
+++ b/style.css
@@ -5,17 +5,22 @@ body {
     width: 100%;
     box-sizing: border-box;
     background-color: var(--secondary-color);
-    color: varvar(--primary-color);
+    color: var(--primary-color);
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
+
 html {
     scroll-behavior: smooth;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 /*Common styling*/
@@ -28,28 +33,94 @@ html {
     --clean-font: "Source Sans 3", sans-serif;
 }
 
-/*Hero name styling*/
+/*Hero name*/
 h1 {
     font-size: 80px;
     font-style: italic;
     font-weight: 800;
 }
 
-/*Section title styling*/
+/*Section title*/
 h2 {
     font-family: var(--strong-font);
     font-style: italic;
     font-weight: 800;
     font-size: 40px;
-    color:var(--primary-color);
 }
 
-/*Emphasizing text styling*/
-.highlight{
+/*Project page title*/
+h3 {
+    font-family: var(--strong-font);
+    font-weight: 800;
+    color: var(--primary-color);
+    font-size: 50px;
+}
+
+/*Project card title*/
+h4 {
+    font-family: var(--clean-font);
+    color: var(--secondary-color);
+    font-weight: 600;
+    font-size: 25px;
+    font-style: italic;
+    padding-top: 5px;
+}
+
+/*Emphasizing text*/
+.highlight {
     font-weight: 800;
     color: var(--accent-color);
 }
 
+/*Link text color adjustment*/
+a {
+    color: inherit;
+}
+
+.base-text {
+    font-family: var(--clean-font);
+    color: var(--primary-color);
+    font-size: 16px;
+    font-weight: 500;
+}
+
+/*Figure components*/
+figcaption {
+    font-size: 15px;
+    padding: 5px;
+    color: var(--accent-color);
+    font-weight: 500;
+    font-family: var(--clean-font);
+}
+
+figure {
+    text-align: center;
+}
+
+/*General button*/
+.general-button {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border: solid;
+    border-color: var(--primary-color);
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+    font-family: var(--strong-font);
+    font-weight: 700;
+    transition: 0.2s ease-in-out;
+}
+
+.general-button:hover {
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
+    border-color: var(--accent-color);
+}
 
 /*navbar*/
 nav {
@@ -63,12 +134,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-
     background: rgba(28, 36, 90);
-    backdrop-filter: blur(15px) saturate(150%);
-    -webkit-backdrop-filter: blur(15px);
 }
-
 
 /*navbar logo*/
 nav .logo {
@@ -135,7 +202,7 @@ footer {
     font-family: var(--clean-font);
 }
 
-#footer-icon-container {
+.footer-icon-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,14 +210,17 @@ footer {
     padding: 5px;
     font-size: 30px;
 }
-.footer-icon{
+
+.footer-icon {
     transition: .7s ease;
     color: var(--primary-color);
 }
-.footer-icon:hover{
+
+.footer-icon:hover {
     filter: drop-shadow(0 0 3px rgba(28, 36, 90, 1));
 }
-#footer-title {
+
+.footer-title {
     text-align: center;
     font-size: 1.2rem;
     padding: 10px;
@@ -160,8 +230,9 @@ footer {
 }
 
 /*Common section styling*/
-#contact{
-    height:70vh;
+#contact,
+#about,
+#hero {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -170,69 +241,36 @@ footer {
     padding: 0;
 }
 
-#projects{
+/*Section-specific styling*/
+#contact {
+    height: 70vh;
+}
+
+#projects {
     display: flex;
     flex-direction: column;
     margin: 0;
     padding-top: var(--nav-height);
 }
 
-#about{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+#about {
     padding-top: var(--nav-height);
 }
-/*Button styling*/
-.general-button {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    border: solid;
-    border-color: var(--primary-color);
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-    font-family: var(--strong-font);
-    font-weight:700;
-    transition: 0.2s ease-in-out;
-}
 
-.general-button:hover {
-    background-color:var(--accent-color);
-    color: var(--secondary-color);
-    border-color: var(--accent-color);
-}
-
-/*Hero general and component styling*/
 #hero {
     position: relative;
     background-color: var(--primary-color);
     min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+    width: 100%;
 }
 
+/*Hero components*/
 #hero-container {
     flex: 1;
-    /* fills space above arrow */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* vertical center */
     align-items: center;
-    /* horizontal center */
     text-align: center;
 }
 
@@ -374,38 +412,41 @@ footer {
     transform: scale(1.05);
 }
 
-.skill-button {
-  background-color: var(--primary-color);
-  border: none;
-  color: var(--secondary-color);
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 16px;
-  font-family: var(--strong-font);
-  font-weight: 600;
-  transition: .4s ease;
-  font-size: 20px;
+/*Skills section*/
+
+/*Pill span*/
+.skill-pill {
+    background-color: var(--primary-color);
+    border: none;
+    color: var(--secondary-color);
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 16px;
+    font-family: var(--strong-font);
+    font-weight: 600;
+    transition: .4s ease;
+    font-size: 20px;
 }
 
-.skill-button:hover{
-    background-color:var(--accent-color);
-    /*filter: drop-shadow(0 0 10px rgba(75, 85, 149, 1));*/
+.skill-pill:hover {
+    background-color: var(--accent-color);
     transform: scale(1.04);
     cursor: default;
 }
 
-.skill-title{
+.skill-title {
     font-family: var(--strong-font);
-    color:var(--primary-color);
+    color: var(--primary-color);
     font-size: 25px;
     font-weight: 800;
 
 }
-#skills-list{
+
+#skills-list {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -413,7 +454,7 @@ footer {
     gap: 10px;
 }
 
-.skills-buttons-container{
+.skills-pills-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -421,58 +462,8 @@ footer {
     flex-wrap: wrap;
 }
 
-#contact-content-container {
-    color: var(--primary-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-#contact-methods{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction:row;
-    gap: 50px;
-    margin-top: 20px;
-}
-.contact-label{
-    font-family: var(--strong-font);
-    color: var(--primary-color);
-    font-size: 25px;
-    font-weight: 700;
-}
-
-.contact-method-container, #contact-icons-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
-.contact-icon{
-    font-size: 50px;
-    transition: .7s ease;
-}
-
-#contact-icons-container{
-    flex-direction: row;
-    padding-top:30px;
-}
-
-.contact-icon:hover{
-    filter: drop-shadow(0 0 3px rgba(28, 36, 90, 1));
-    transform: scale(1.04);
-    cursor: default;
-}
-
-
-.project-list-title-container{
+/*Projects list page*/
+.project-list-title-container {
     color: var(--primary-color);
     padding-top: vaR(--nav-height);
     display: flex;
@@ -480,7 +471,8 @@ footer {
     align-items: center;
 }
 
-.card{
+/*Individual project card*/
+.card {
     font-family: var(--clean-font);
     color: var(--secondary-color);
     background-color: var(--primary-color);
@@ -496,11 +488,12 @@ footer {
     position: relative;
 }
 
-.card:hover{
+.card:hover {
     transform: translate(0, -10px);
-     box-shadow: 0 8px 16px 0 rgba(75, 85, 149, 1);
+    box-shadow: 0 8px 16px 0 rgba(75, 85, 149, 1);
 }
-.card-image{
+
+.card-image {
     height: 250px;
     width: 330px;
     border: solid 2.5px var(--accent-color);
@@ -508,176 +501,194 @@ footer {
     object-fit: cover;
 }
 
-.card-text{
+.card-text {
     display: flex;
     flex-direction: column;
     text-wrap: wrap;
     text-align: left;
     width: 100%;
-    padding-left:8px; 
+    padding-left: 8px;
     padding-right: 8px;
 }
 
-h4{
-        font-family: var(--clean-font);
-        color: var(--secondary-color);
-        font-weight: 600;
-        font-size: 25px;
-        font-style: italic;
-        padding-top:5px;
+/*Tags*/
+.mechanical-tag,
+.entrepreneurship-tag,
+.web-dev-tag,
+.individual-tag,
+.team-tag, .skill-tag{
+    color: var(--primary-color);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: default;
+    border-radius: 16px;
+    padding: 5px 10px;
+    font-family: var(--strong-font);
+    font-weight: 600;
+    transition: .4s ease;
+    font-size: 13px;
 }
 
-#highlighted-projects-container{
-    display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  gap: 32px;
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-.individual-tag{
+.individual-tag {
     background-color: #a9d7f1;
 }
 
-.team-tag{
+.team-tag {
     background-color: #dcd2ff;
 }
 
-
-.mechanical-tag, .entrepreneurship-tag, .web-dev-tag, .individual-tag, .team-tag, .skill-tag{
-  color: var(--primary-color);
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: default;
-  border-radius: 16px;
-  padding: 5px 10px;
-  font-family: var(--strong-font);
-  font-weight: 600;
-  transition: .4s ease;
-  font-size: 13px;
-}
-
-.mechanical-tag{
+.mechanical-tag {
     background-color: rgb(227, 221, 223);
-   /* color:rgb(121, 54, 73);*/
 }
 
-.entrepreneurship-tag{
+.entrepreneurship-tag {
     background-color: rgb(184, 255, 200);
-    /*color: rgb(19, 88, 35);*/
 }
 
-.web-dev-tag{
+.web-dev-tag {
     background-color: rgb(244, 184, 164);
 }
 
-.skill-tag{
+.skill-tag {
     border: 2px solid var(--accent-color);
     color: var(--accent-color);
 }
 
-.skill-tag-container, .category-tag-container{
+.skill-tag-container,
+.category-tag-container {
     display: flex;
     flex-wrap: wrap;
     margin-top: 5px;
-    gap:5px;
+    gap: 5px;
 }
 
-
-.base-text, figcaption{
-    font-family: var(--clean-font);
-    color: var(--primary-color);
-    font-size: 16px;
-    font-weight: 500;
+/*Featured projects section on home page*/
+#highlighted-projects-container {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 32px;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
-#projects-description-container{
+#projects-description-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left:20px;
+    padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
+    width: 100%;
 }
-.open-arrow{
+
+.open-arrow {
     transform: rotate(45deg);
 }
 
-.card-link{
-  position: absolute;
-  inset: 0;             /* top:0 right:0 bottom:0 left:0 */
-  z-index: 10;
-  text-decoration: none;
+.card-link {
+    position: absolute;
+    inset: 0;
+    z-index: 10;
+    text-decoration: none;
 }
 
-#projects-container{
+#projects-container {
     display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  gap: 32px;
-  max-width: 100%;
-  margin: 0 auto;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 32px;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
-a{
-    color:inherit;
+/*Contact components*/
+#contact-content-container {
+    color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.project-title-container{
+#contact-methods {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 50px;
+    margin-top: 20px;
+}
+
+.contact-label {
+    font-family: var(--strong-font);
+    color: var(--primary-color);
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.contact-method-container,
+#contact-icons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.contact-icon {
+    font-size: 50px;
+    transition: .7s ease;
+}
+
+#contact-icons-container {
+    flex-direction: row;
+    padding-top: 30px;
+}
+
+.contact-icon:hover {
+    filter: drop-shadow(0 0 3px rgba(28, 36, 90, 1));
+    transform: scale(1.04);
+    cursor: default;
+}
+
+
+/*Project details page*/
+/*Header + title*/
+.project-title-container {
     padding-top: calc(var(--nav-height) + 10px);
     display: flex;
     justify-content: center;
-    gap:5px;
+    gap: 5px;
     flex-direction: row;
     align-items: center;
     margin: 10px 40px 10px 40px;
 }
 
-.project-title-text-container{
+.project-title-text-container {
     display: flex;
     flex-direction: column;
     color: var(--primary-color);
     gap: 10px;
 }
 
-h3{
-    font-family: var(--strong-font);
-    font-weight: 800;
-    color: var(--primary-color);
-    font-size: 50px;
-}
-
-.project-header-image{
+.project-header-image {
     height: 300px;
     width: 550px;
     object-fit: cover;
     border-radius: 20px;
 }
 
-.bullet-list{
-list-style-type: disc;
-padding-left: 30px;
-display: flex;
-gap: 8px;
-flex-direction: column;
-}
-
-.bullet-list li{
-    font-size: 22px;
-}
-
-.bullet-list li::marker {
-  color: var(--primary-color);
-  font-size: inherit;
-}
-.section{
+/*Bullet point content*/
+.section {
     display: flex;
     align-items: top;
     gap: 10px;
 }
 
-.description{
+.description {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -685,32 +696,43 @@ flex-direction: column;
     padding: 30px 40px 10px 40px;
 }
 
-figcaption{
-    font-size: 15px;
-    padding: 5px;
-    color: var(--accent-color);
+.bullet-list {
+    list-style-type: disc;
+    padding-left: 30px;
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
 }
 
-figure{
-    text-align: center;
+.bullet-list li {
+    font-size: 22px;
 }
 
-.image-custom{
+.bullet-list li::marker {
+    color: var(--primary-color);
+    font-size: inherit;
+}
+
+/*Image with specific size*/
+.image-custom {
     object-fit: cover;
     border-radius: 20px;
 }
 
-.view-more{
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    background-color: var(--primary-color);
-}
 
-.multiple-images{
+/* Section for multiple consecutive images*/
+.multiple-images {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
     padding-top: 10px;
+}
+
+/*Return to projects section*/
+.view-more {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: var(--primary-color);
 }
