Updated mobile styling and created mobile menu

--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,7 @@
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
     nav {
         display: none;
+        height: 0;
     }
 
     /*Hero name*/
@@ -64,15 +65,18 @@ h4{
     font-size: 12px;
 }
 
-#about-text{
+.about-text{
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .footer-title{
     display: none;
 }
 
+footer{
+    justify-content: center;
+}
 #contact-content-container{
     padding: 10px;
 }
@@ -91,6 +95,9 @@ h4{
     justify-content: center;
 }
 
+.skill-pill{
+    font-size: 15px;
+}
 .section{
     flex-direction: column;
     justify-content: center;
@@ -118,9 +125,60 @@ h3{
     width: 300px;
 }
 
+
+
+#profile {
+    height: 200px;
+    width: 200px;
+}
+
+.general-button{
+    font-size: 12px;
+}
+
+.sidemenu, .openbutton{
+display:block;
+position: fixed;
+}
+
+
+}
+
+@media (min-width: 1000px){
 #projects-container{
     display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+#highlighted-projects-container{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    padding: 5px;
+}
+
+#contact{
+    height: 50vh;
+}
+
+#contact-methods{
+    flex-direction: row;
+}
+
+}
+
+@media (max-width: 1035px){
+
+#projects-container{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    
+    .footer-title{
+        display: block;
+    }
+}
+}
+
+@media (max-width: 730px){
+    #projects-container{
+    display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    place-items:center;
 }
 }
