--- a/style.css
+++ b/style.css
@@ -123,6 +123,59 @@ figure {
 }
 
 /*navbar*/
+/* The sidepanel menu */
+.sidemenu {
+  height: auto; /* Specify a height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 100000; /* Stay on top */
+  left: 0;
+  background-color: var(--primary-color); /* Black*/
+  overflow: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 0px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
+  display: flex;
+  align-items: left;
+}
+
+/* The sidepanel links */
+.sidemenu a {
+  padding: 8px 8px 8px 10px;
+  text-decoration: none;
+  font-size: 30px;
+  color: var(--primary-color);
+  display: block;
+  transition: 0.3s;
+  background-color: var(--secondary-color);
+  font-family: var(--clean-font);
+  font-weight: 700;
+}
+
+
+/* Position and style the close button (top right corner) */
+.sidemenu .closebutton {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  color: var(--primary-color);
+}
+
+/* Style the button that is used to open the sidepanel */
+.openbutton {
+  font-size: 30px;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  padding: 10px 15px;
+  border: none;
+  width: 100%;
+  text-align: left;
+  font-family: var(--clean-font);
+}
+
 nav {
     position: fixed;
     top: 0;
@@ -412,6 +465,12 @@ footer {
     transform: scale(1.05);
 }
 
+#about-profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /*Skills section*/
 
 /*Pill span*/
@@ -486,6 +545,7 @@ footer {
     width: 375px;
     height: 420px;
     position: relative;
+    z-index: 1;
 }
 
 .card:hover {
@@ -568,9 +628,10 @@ footer {
 #highlighted-projects-container {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 32px;
-    max-width: 100%;
+    justify-content: space-evenly;
+    width: 100%;
     margin: 0 auto;
+    place-items: center;row-gap: 20px;
 }
 
 #projects-description-container {
@@ -597,11 +658,12 @@ footer {
 #projects-container {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 32px;
-    max-width: 100%;
+    justify-content: space-evenly;
+    width: 100%;
     margin: 0 auto;
+    place-items: center;
+    row-gap: 20px;
 }
-
 /*Contact components*/
 #contact-content-container {
     color: var(--primary-color);
